--- a/kill-bill/package.json
+++ b/kill-bill/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.1129.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "killbill": "^0.1.0"
   },
   "scripts": {
     "unit": "jest",
