--- a/samconfig.toml
+++ b/samconfig.toml
@@ -10,4 +10,4 @@ confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
 image_repositories = []
-parameter_overrides = "Stage=\"test\" Region=\"us-east-1\" CatalogTable=\"kb-catalog\""
+parameter_overrides = "Stage=\"test\" Region=\"us-east-1\" CatalogTable=\"KBCatalog\""
